deployments/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: vault-agent
  name: vault-agent
