deployments/kustomize/base/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "vault-agent"
  annotations:
    # cert-manager 自動將 CA Bundle 注入至 Webhook 設定
    cert-manager.io/inject-ca-from: vault-agent/vault-agent-ca
webhooks:
  - name: "vault-agent.vault-agent.svc"
    namespaceSelector:
      matchExpressions:
        - key: vault-agent.io/admission-webhooks
          operator: In
          values:
            - enabled
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - cert-manager
    objectSelector:
      matchExpressions:
        - key: app
          operator: NotIn
          values:
            - vault-agent
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: "vault-agent"
        name: "vault-agent"
        port: 8080
        path: "/mutate"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Ignore
